Set the minimum Java version to 16; drop Bedrock 1.17.0 (#2477)